# programming_python

./: Makefile  README.md  starter_by_rye.md  starter_by_tox.md
basic/: getting_started.md  setup.md
basic/arg/: argparse_sample1.py  args_sample1.py
basic/logging/: README.md
basic/testing/: README.md
basic/testing/lib_pytest/: Makefile
libs/: README.md
libs/alembic/: README.md
libs/alembic/sample1/: .gitignore  README.md  pyproject.toml
libs/alembic/sample2/: README.md  pyproject.toml
libs/alembic/sample2/migrations/: env.py
libs/fabric/sample1/: docker-compose.yaml  requirements-freeze.txt  requirements.txt
libs/fabric/sample1/.ssh/: docker_rsa
libs/fabric/sample1/fabfile/: __init__.py  testsamples.py
libs/fabric/sample1/tests/: test_samples.py
libs/fastapi/sample1/: README.md  pyproject.toml
libs/full-stack-fastapi-template/: README.md  note.md
libs/lib_fabric/: Dockerfile  Makefile  README.md
libs/lib_fabric/.ssh/: docker_rsa.pub
libs/lib_fabric/fabfile/: helloworld.py
libs/sqlmodel/: README.md
libs/sqlmodel/sample1/: README.md  pyproject.toml
libs/uwsgi/: README.md
samples/myapp/: README.md  alembic.ini  pyproject.toml
samples/myapp/playground/: docker-compose.yml
samples/myapp/src/myapp/: __init__.py
samples/myapp/src/myapp/cmd/: debug.py
samples/myapp/src/myapp/config/: config.py
samples/myapp/src/myapp/database/: database.py
starter-by-rye-sample/: README.md  pyproject.toml
starter-by-rye-sample/src/starter_by_rye_sample/: __init__.py
starter-by-tox-sample/: pyproject.toml
(+16 files in other folders)
