[project]
name = "starter-by-rye-sample"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "syunkitada", email = "syun.kitada@gmail.com" }
]
dependencies = [
    "ansible-lint"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff",
    "pytest"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/starter_by_rye_sample"]
